--- a/index.html
+++ b/index.html
@@ -1,78 +1,40 @@
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Schedule</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
-      <!-- Header -->
-      <div class="header">
-        <h1>Dept. of EEE</h1>
-        <h2>4th(A) Semester Schedule</h2>
-        <p id="date-time"></p>
-        <p id="last-synced"></p>
-        <button id="semesterButton">Filter Semester: All</button>
-        <button id="dayButton">Select Day: Today</button>
-      </div>
-
-      <!-- Dropdown Menus -->
-      <div id="dayMenu">
-        <button onclick="selectDay('Sunday')">Sunday</button>
-        <button onclick="selectDay('Monday')">Monday</button>
-        <button onclick="selectDay('Tuesday')">Tuesday</button>
-        <button onclick="selectDay('Wednesday')">Wednesday</button>
-        <button onclick="selectDay('Thursday')">Thursday</button>
-        <button onclick="selectDay('Friday')">Friday</button>
-        <button onclick="selectDay('Saturday')">Saturday</button>
-        <button onclick="closeDayMenu()">Close</button>
-      </div>
-
-      <div id="semesterMenu"></div>
-      <button id="installButton" style="display: none;">Install App</button>
-
-      <!-- Main Content -->
-      <div class="main-content" id="schedule"></div>
-
-      <!-- Footer -->
-      <div class="footer">
-        <p>Maintained by CR</p>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Schedule Viewer</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Schedule Viewer</h1>
+    <div id="controls">
+      <button id="filterDayButton">Filter Day: Today</button>
+      <button id="filterSemesterButton">Filter Semester: All</button>
     </div>
+  </header>
 
-    <!-- Modal for Selecting Semester -->
-    <div id="semesterModal" class="modal">
-      <div class="modal-content">
-        <h3>Select a Semester</h3>
-        <a href="#" target="_blank">Semester 1</a>
-        <a href="#" target="_blank">Semester 2</a>
-        <a href="#" target="_blank">Semester 3</a>
-        <a href="#" target="_blank">Semester 4</a>
-        <button onclick="closeModal()">Close</button>
-      </div>
-    </div>
+  <div id="schedule"></div>
 
-    <script>
-      window.addEventListener('load', () => {
-        registerSW();
-      });
+  <!-- Day and Semester Menus -->
+  <div id="dayMenu">
+    <button onclick="selectDay('Sunday')">Sunday</button>
+    <button onclick="selectDay('Monday')">Monday</button>
+    <button onclick="selectDay('Tuesday')">Tuesday</button>
+    <button onclick="selectDay('Wednesday')">Wednesday</button>
+    <button onclick="selectDay('Thursday')">Thursday</button>
+    <button onclick="selectDay('Friday')">Friday</button>
+    <button onclick="selectDay('Saturday')">Saturday</button>
+    <button onclick="closeDayMenu()">Close</button>
+  </div>
 
-      // Register the Service Worker
-      async function registerSW() {
-        if ('serviceWorker' in navigator) {
-          try {
-            await navigator
-              .serviceWorker
-              .register('serviceworker.js');
-          }
-          catch (e) {
-            console.log('SW registration failed');
-          }
-        }
-      }
-    </script>
-    <script src="./app.js"></script>
-  </body>
+  <div id="semesterMenu"></div>
+
+  <footer>
+    <p id="dateTime"></p>
+  </footer>
+
+  <script src="app.js"></script>
+</body>
 </html>
