--- a/index.html
+++ b/index.html
@@ -1,170 +1,155 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Class Schedule</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Class Schedule</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <!-- Header -->
+    <div class="header">
+      <h1>Dept. of EEE</h1>
+      <h2>4th(A) Semester Schedule</h2>
+      <p id="date-time"></p>
+      <p id="last-synced"></p>
+      <button id="menuButton">Open Menu</button>
+    </div>
 
-        <!-- Link to Manifest -->
-        <link rel="manifest" href="manifest.json">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="container">
-            <!-- Header -->
-            <div class="header">
-                <h1>Dept. of EEE</h1>
-                <h2>4th(A) Semester Schedule</h2>
-                <p id="date-time"></p>
-                <p id="last-synced"></p>
-                <button id="semesterButton">Select Semester</button>
-                <button id="dayButton">Select Day</button>
-            </div>
+    <!-- Dropdown Menus -->
+    <div id="menuContainer" style="display: none;">
+      <button id="semesterButton">Select Semester</button>
+      <button id="dayButton">Select Day</button>
 
-            <!-- Dropdown Menus -->
-            <div id="dayMenu" class="dropdown-menu">
-                <button onclick="selectDay('Sunday')">Sunday</button>
-                <button onclick="selectDay('Monday')">Monday</button>
-                <button onclick="selectDay('Tuesday')">Tuesday</button>
-                <button onclick="selectDay('Wednesday')">Wednesday</button>
-                <button onclick="selectDay('Thursday')">Thursday</button>
-                <button onclick="selectDay('Friday')">Friday</button>
-                <button onclick="selectDay('Saturday')">Saturday</button>
-                <button onclick="closeDayMenu()">Close</button>
-            </div>
+      <div id="dayMenu" class="dropdown-menu">
+        <button onclick="selectDay('Sunday')">Sunday</button>
+        <button onclick="selectDay('Monday')">Monday</button>
+        <button onclick="selectDay('Tuesday')">Tuesday</button>
+        <button onclick="selectDay('Wednesday')">Wednesday</button>
+        <button onclick="selectDay('Thursday')">Thursday</button>
+        <button onclick="selectDay('Friday')">Friday</button>
+        <button onclick="selectDay('Saturday')">Saturday</button>
+        <button onclick="closeDayMenu()">Close</button>
+      </div>
+    </div>
 
-            <!-- Main Content -->
-            <div class="main-content" id="schedule"></div>
+    <!-- Main Content -->
+    <div class="main-content" id="schedule"></div>
 
-            <!-- Footer -->
-            <div class="footer">
-                <p>Maintaining by CR</p>
-                <div style="display: none;">
-                    <a href='https://www.free-website-hit-counter.com'>
-                        <img src='https://www.free-website-hit-counter.com/zc.php?d=4&id=1684&s=5' border='0' alt='Free Website Hit Counter'>
-                    </a>
-                    <br />
-                    <small>
-                        <a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a>
-                    </small>
-                </div>
-            </div>
+    <!-- Footer -->
+    <div class="footer">
+      <p>Maintained by CR</p>
+    </div>
 
-            <!-- Modal for Selecting Semester -->
-            <div id="semesterModal" class="modal">
-                <div class="modal-content">
-                    <h3>Select a Semester</h3>
-                    <button onclick="selectSemester('1st')">1st Semester</button>
-                    <button onclick="selectSemester('2nd')">2nd Semester</button>
-                    <button onclick="selectSemester('3rd')">3rd Semester</button>
-                    <button onclick="selectSemester('4th')">4th Semester</button>
-                    <button onclick="closeModal()">Close</button>
-                </div>
-            </div>
-        </div>
+    <!-- Modal for Selecting Semester -->
+    <div id="semesterModal" class="modal">
+      <div class="modal-content">
+        <h3>Select a Semester</h3>
+        <button onclick="selectSemester('1st')">1st Semester</button>
+        <button onclick="selectSemester('2nd')">2nd Semester</button>
+        <button onclick="selectSemester('3rd')">3rd Semester</button>
+        <button onclick="selectSemester('4th')">4th Semester</button>
+        <button onclick="closeModal()">Close</button>
+      </div>
+    </div>
+  </div>
 
-        <script>
-            const scheduleDiv = document.getElementById('schedule');
-            const semesterButton = document.getElementById('semesterButton');
-            const dayButton = document.getElementById('dayButton');
-            const dayMenu = document.getElementById('dayMenu');
-            const semesterModal = document.getElementById('semesterModal');
+  <script>
+    const scheduleDiv = document.getElementById('schedule');
+    const menuButton = document.getElementById('menuButton');
+    const menuContainer = document.getElementById('menuContainer');
+    const semesterButton = document.getElementById('semesterButton');
+    const dayButton = document.getElementById('dayButton');
+    const dayMenu = document.getElementById('dayMenu');
+    const semesterModal = document.getElementById('semesterModal');
 
-            let selectedDay = 'Today'; // Default value is 'Today'
-            let selectedSemester = '4th'; // Default semester
+    let selectedDay = 'Today';
+    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTLX2Q6ueX38WbATebZ2r8j2AuIgS2TOxcnGkk5WWwnGq5CITy09fDou81Bw9LB6yq9HxUDKqNj5vXT/pub?output=tsv';
 
-            const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTLX2Q6ueX38WbATebZ2r8j2AuIgS2TOxcnGkk5WWwnGq5CITy09fDou81Bw9LB6yq9HxUDKqNj5vXT/pub?output=tsv';
+    // Toggle menu visibility
+    menuButton.addEventListener('click', () => {
+      menuContainer.style.display = menuContainer.style.display === 'none' ? 'block' : 'none';
+    });
 
-            // Update date and time
-            function updateDateTime() {
-                const now = new Date();
-                const time = now.toLocaleTimeString();
-                const date = now.toLocaleDateString();
-                const dateTimeString = `${date} - ${time}`;
-                document.getElementById('date-time').innerText = dateTimeString;
-                document.getElementById('last-synced').innerText = `Last Synced: ${time}`;
+    // Update date and time
+    function updateDateTime() {
+      const now = new Date();
+      const time = now.toLocaleTimeString();
+      const date = now.toLocaleDateString();
+      const dateTimeString = `${date} - ${time}`;
+      document.getElementById('date-time').innerText = dateTimeString;
+      document.getElementById('last-synced').innerText = `Last Synced: ${time}`;
+    }
+
+    // Fetch schedule for selected day
+    function fetchSchedule(day = selectedDay) {
+      fetch(sheetUrl)
+        .then(response => {
+          if (!response.ok) throw new Error(`Network response was not ok: ${response.statusText}`);
+          return response.text();
+        })
+        .then(data => {
+          const rows = data.split('\n');
+          scheduleDiv.innerHTML = ''; // Clear previous schedule
+          let isDark = true;
+          rows.forEach((row, index) => {
+            if (index === 0) return; // Skip header row
+            const cols = row.split('\t');
+            if (cols.length < 7) return;
+            if (cols[6].trim() === day || (day === 'Today' && cols[6].trim() === new Date().toLocaleString('en-US', { weekday: 'long' }))) {
+              const scheduleContainer = document.createElement('div');
+              scheduleContainer.classList.add('schedule-container', isDark ? 'dark' : 'yellow');
+              scheduleContainer.innerHTML = `
+                <h3>Time: ${cols[0]}</h3>
+                <p>Course: ${cols[1]}</p>
+                <p>Teacher: ${cols[2]}</p>
+                <p>Room: ${cols[3]}</p>
+                ${cols[4].trim() ? `<p>Special Note: ${cols[4]}</p>` : ''}
+                ${cols[5].trim() ? `<p><strong>Important Link:</strong> <a href="${cols[5].trim()}" target="_blank" class="important-link">${cols[5].trim().slice(0, 30)}...</a></p>` : ''}
+              `;
+              scheduleDiv.appendChild(scheduleContainer);
+              isDark = !isDark; // Alternate between dark and yellow backgrounds
             }
+          });
+        })
+        .catch(error => console.error('Error fetching or processing data:', error));
+    }
 
-            // Fetch schedule for selected day and semester
-            function fetchSchedule(day = selectedDay, semester = selectedSemester) {
-                fetch(sheetUrl)
-                    .then(response => {
-                        if (!response.ok) throw new Error(`Network response was not ok: ${response.statusText}`);
-                        return response.text();
-                    })
-                    .then(data => {
-                        const rows = data.split('\n');
-                        scheduleDiv.innerHTML = ''; // Clear previous schedule
-                        let isDark = true;
-                        rows.forEach((row, index) => {
-                            if (index === 0) return; // Skip header row
-                            const cols = row.split('\t');
-                            if (cols.length < 8) return;
-                            if (
-                                cols[0].trim() === semester &&
-                                (cols[1].trim() === day || (day === 'Today' && cols[1].trim() === new Date().toLocaleString('en-US', { weekday: 'long' })))
-                            ) {
-                                const scheduleContainer = document.createElement('div');
-                                scheduleContainer.classList.add('schedule-container', isDark ? 'dark' : 'yellow');
-                                scheduleContainer.innerHTML = `
-                                    <h3>Time: ${cols[2]}</h3>
-                                    <p>Course: ${cols[3]}</p>
-                                    <p>Teacher: ${cols[4]}</p>
-                                    <p>Room: ${cols[5]}</p>
-                                    ${cols[6].trim() ? `<p>Special Note: ${cols[6]}</p>` : ''}
-                                    ${cols[7].trim() ? `<p><strong>Important Link:</strong> <a href="${cols[7].trim()}" target="_blank" class="important-link">${cols[7].trim().slice(0, 30)}...</a></p>` : ''}
-                                `;
-                                scheduleDiv.appendChild(scheduleContainer);
-                                isDark = !isDark; // Alternate between dark and yellow backgrounds
-                            }
-                        });
-                    })
-                    .catch(error => console.error('Error fetching or processing data:', error));
-            }
+    // Select day and update the button text
+    function selectDay(day) {
+      selectedDay = day;
+      dayButton.innerText = `Select Day: ${day}`;
+      dayMenu.style.display = 'none'; // Hide the menu after selection
+      fetchSchedule(day);
+    }
 
-            // Select day and update the button text
-            function selectDay(day) {
-                selectedDay = day;
-                dayButton.innerText = `Select Day: ${day}`;
-                dayMenu.style.display = 'none'; // Hide the menu after selection
-                fetchSchedule(day);
-            }
+    // Select semester
+    function selectSemester(semester) {
+      console.log(`Selected semester: ${semester}`);
+      semesterModal.style.display = 'none';
+    }
 
-            // Open semester modal
-            semesterButton.addEventListener('click', () => {
-                semesterModal.style.display = 'flex';
-            });
+    // Close the day menu
+    function closeDayMenu() {
+      dayMenu.style.display = 'none';
+    }
 
-            // Select semester
-            function selectSemester(semester) {
-                selectedSemester = semester;
-                semesterButton.innerText = `Semester: ${semester}`;
-                semesterModal.style.display = 'none';
-                fetchSchedule(selectedDay, semester);
-            }
+    // Close the modal
+    function closeModal() {
+      semesterModal.style.display = 'none';
+    }
 
-            // Close the day menu
-            function closeDayMenu() {
-                dayMenu.style.display = 'none';
-            }
+    // Toggle day menu visibility
+    dayButton.addEventListener('click', () => {
+      dayMenu.style.display = dayMenu.style.display === 'block' ? 'none' : 'block';
+    });
 
-            // Close the modal
-            function closeModal() {
-                semesterModal.style.display = 'none';
-            }
-
-            // Event listener to toggle day menu as a dropdown
-            dayButton.addEventListener('click', () => {
-                if (dayMenu.style.display === 'none' || dayMenu.style.display === '') {
-                    dayMenu.style.display = 'block'; // Show the menu on first click
-                } else {
-                    dayMenu.style.display = 'none'; // Hide the menu if it's already visible
-                }
-            });
-
-            // Initialize schedule and update date-time
-            updateDateTime();
-            fetchSchedule();
-            setInterval(updateDateTime, 60000); // Update every minute
-        </script>
-    </body>
+    // Initialize schedule and update date-time
+    updateDateTime();
+    fetchSchedule();
+    setInterval(updateDateTime, 60000); // Update every minute
+  </script>
+</body>
 </html>
