--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Schedule</title>
-    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <!-- Header -->
         <div class="header">
             <h1>Dept. of EEE</h1>
             <h2>4th(A) Semester Schedule</h2>
@@ -19,7 +17,7 @@
             <button id="dayButton">Select Day: Today</button>
         </div>
 
-        <!-- Dropdown Menus -->
+        <!-- Day Selection Dropdown -->
         <div id="dayMenu">
             <button onclick="selectDay('Sunday')">Sunday</button>
             <button onclick="selectDay('Monday')">Monday</button>
@@ -30,9 +28,19 @@
             <button onclick="selectDay('Saturday')">Saturday</button>
             <button onclick="closeDayMenu()">Close</button>
         </div>
-        <button id="installButton" style="display: none;">Install App</button>
 
-        <!-- Main Content -->
+        <!-- Modal for Selecting Semester -->
+        <div id="semesterModal" class="modal">
+            <div class="modal-content">
+                <h3>Select a Semester</h3>
+                <button onclick="selectSemester('1st')">1st Semester</button>
+                <button onclick="selectSemester('2nd')">2nd Semester</button>
+                <button onclick="selectSemester('3rd')">3rd Semester</button>
+                <button onclick="selectSemester('4th')">4th Semester</button>
+                <button onclick="closeModal()">Close</button>
+            </div>
+        </div>
+
         <div class="main-content" id="schedule"></div>
 
         <!-- Footer -->
@@ -41,33 +49,6 @@
         </div>
     </div>
 
-    <!-- Modal for Selecting Semester -->
-    <div id="semesterModal" class="modal">
-        <div class="modal-content">
-            <h3>Select a Semester</h3>
-            <button onclick="selectSemester('1st')">1st Semester</button>
-            <button onclick="selectSemester('2nd')">2nd Semester</button>
-            <button onclick="selectSemester('3rd')">3rd Semester</button>
-            <button onclick="selectSemester('4th')">4th Semester</button>
-            <button onclick="closeModal()">Close</button>
-        </div>
-    </div>
+    <script src="app.js"></script>
 </body>
-<script>
-    window.addEventListener('load', () => {
-        registerSW();
-    });
-
-    // Register the Service Worker
-    async function registerSW() {
-        if ('serviceWorker' in navigator) {
-            try {
-                await navigator.serviceWorker.register('serviceworker.js');
-            } catch (e) {
-                console.log('SW registration failed');
-            }
-        }
-    }
-</script>
-<script src="app.js"></script>
 </html>
