--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div id="roomModal" class="modal">
             <div class="modal-content">
                 <h3>Select a Room</h3>
+                <button onclick="selectRoom('All')">All Rooms</button>
                 <button onclick="selectRoom('106')">Room 106</button>
                 <button onclick="selectRoom('310')">Room 310</button>
                 <button onclick="selectRoom('312')">Room 312</button>
