--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Schedule</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="container">
@@ -16,7 +17,6 @@
             <button id="semesterButton">Select Semester</button>
             <button id="dayButton">Select Day: Today</button>
             <button id="roomButton">Select Room: All Rooms</button>
-            <button id="teacherButton">Select Teacher: All Teachers</button>
         </div>
 
         <!-- Day Selection Dropdown -->
@@ -58,24 +58,11 @@
             </div>
         </div>
 
-        <!-- Modal for Selecting Teacher -->
-        <div id="teacherModal" class="modal">
-            <div class="modal-content">
-                <h3>Select a Teacher</h3>
-                <button onclick="selectTeacher('All')">All Teachers</button>
-                <button onclick="selectTeacher('John Doe')">John Doe</button>
-                <button onclick="selectTeacher('Jane Smith')">Jane Smith</button>
-                <button onclick="selectTeacher('Emily Brown')">Emily Brown</button>
-                <button onclick="selectTeacher('Michael Johnson')">Michael Johnson</button>
-                <button onclick="closeTeacherModal()">Close</button>
-            </div>
-        </div>
-
         <div class="main-content" id="schedule"></div>
 
         <!-- Footer -->
         <div class="footer">
-            <p>Maintaining by CR</p>
+            <p>Maintained by CR</p>
         </div>
     </div>
 
